Feat: udistrital/sga_documentacion#53 Creación consulta aspirantes
